plugins/kotlin/idea/tests/testData/highlighterMetaInfo/SmartCast.kt.highlighting
class <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>My<!>(val <!HIGHLIGHTING("textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>x<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Int<!>?)

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>My<!>?.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>foo<!>(): <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Int<!> {
    if (this == null) return 42
    if (<!HIGHLIGHTING("descr='Extension implicit receiver smart cast to My'; textAttributesKey='KOTLIN_SMART_CAST_RECEIVER'"), HIGHLIGHTING("textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>x<!> == null) {
        if (<!HIGHLIGHTING("descr='Always null'; textAttributesKey='KOTLIN_SMART_CONSTANT'"), HIGHLIGHTING("descr='Extension implicit receiver smart cast to My'; textAttributesKey='KOTLIN_SMART_CAST_RECEIVER'"), HIGHLIGHTING("textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>x<!> != null) {
            return <!HIGHLIGHTING("descr='Extension implicit receiver smart cast to My'; textAttributesKey='KOTLIN_SMART_CAST_RECEIVER'"), HIGHLIGHTING("descr='Smart cast to kotlin.Nothing'; textAttributesKey='KOTLIN_SMART_CAST_VALUE'"), HIGHLIGHTING("textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>x<!>
        }
        return 13
    }
    return <!HIGHLIGHTING("descr='Extension implicit receiver smart cast to My'; textAttributesKey='KOTLIN_SMART_CAST_RECEIVER'"), HIGHLIGHTING("descr='Smart cast to kotlin.Int'; textAttributesKey='KOTLIN_SMART_CAST_VALUE'"), HIGHLIGHTING("textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>x<!>
}
